--- a/KarateKIID.ipynb
+++ b/KarateKIID.ipynb
@@ -500,6 +500,54 @@
     "            MAGIW_KIID_DANE.loc[i, \"POLITYKA_INWESTYCYJNA\"] = pol\n",
     "    except:\n",
     "        pass\n",
+    "    \n",
+    "    # FIO/SFIO\n",
+    "    try:\n",
+    "        wartosc = \"NULL\"\n",
+    "        sf_tekst = tekst.lower()\n",
+    "        if \"specjalistyczny fundusz inwestycyjny otwarty\" in sf_tekst:\n",
+    "            wartosc = \"SFIO\"\n",
+    "        elif \"fundusz inwestycyjny otwarty\" in sf_tekst:\n",
+    "            wartosc = \"FIO\"\n",
+    "        MAGIW_KIID_DANE.loc[i, \"TYP_FUNDUSZU\"] = wartosc\n",
+    "    except: \n",
+    "        pass\n",
+    "    \n",
+    "    # WALUTA_KAPITALU_ZAKLADOWEGO_TOWARZYSTWA\n",
+    "    try:\n",
+    "        waluta = \"NULL\"\n",
+    "        wkzt_tekst = tekst.lower().split(\"Wyniki osiągnięte w przeszłości\".lower())[1].split(\"Informacje praktyczne\".lower())[0]\n",
+    "        if (\"pln\" in wktz_tekst or \"złotówek\" in wkzt_tekst or \"zł\" in wktz_tekst or \"złotych\" in wktz_tekst):\n",
+    "            waluta = \"PLN\"\n",
+    "        elif (\"euro\" in wkzt_tekst):\n",
+    "            waluta = \"EURO\"\n",
+    "        elif (\"dol\" in wkzt_tekst or \"$\" in wkzt_tekst or \"dolarów\" in wkzt_tekst or \"dolar\" in wkzt_tekst):\n",
+    "            waluta = \"DOLAR\"\n",
+    "        MAGIW_KIID_DANE.loc[i, \"WALUTA_KAPITALU_ZAKLADOWEGO_TOWARZYSTWA\"] = waluta\n",
+    "    except:\n",
+    "        pass\n",
+    "    \n",
+    "    # NIP\n",
+    "    try:\n",
+    "        nip = \"NULL\"\n",
+    "        nip_tekst = tekst.lower().split(\"informacje praktyczne\")[1]\n",
+    "        nipy = re.findall(\"\\d-\\d+-\\d+-\\d+\",nip_tekst)\n",
+    "        if len(nipy) > 0:\n",
+    "            nip = nipy[0]\n",
+    "        MAGIW_KIID_DANE.loc[i, \"NIP\"] = nip\n",
+    "    except:\n",
+    "        pass\n",
+    "    \n",
+    "    # KRS\n",
+    "    try:\n",
+    "        krs = \"NULL\"\n",
+    "        krs_tekst = tekst.lower().split(\"informacje praktyczne\")[1]\n",
+    "        krsy = re.findall(\"^\\d{10}$\")\n",
+    "        if len(krsy) > 0:\n",
+    "            krs = krsy[0]\n",
+    "        MAGIW_KIID_DANE.loc[i, \"KRS\"] = krs\n",
+    "    except:\n",
+    "        pass\n",
     "        "
    ]
   },
@@ -1467,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
