--- a/KarateKIID.ipynb
+++ b/KarateKIID.ipynb
@@ -16,9 +16,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'DecipherCallable' from 'pdfminer.pdftypes' (C:\\Users\\mwita\\Anaconda3\\lib\\site-packages\\pdfminer\\pdftypes.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-6cef9365ed07>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mpdfplumber\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0murllib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrequest\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mbs4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pdfplumber\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mutils\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0m_version\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0m__version__\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mpdf\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPDF\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mopen\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPDF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pdfplumber\\pdf.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpdfminer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayout\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLAParams\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mpdfminer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpdfdocument\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPDFDocument\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpdfminer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpdfinterp\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPDFResourceManager\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpdfminer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpdfpage\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPDFPage\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pdfminer\\pdfdocument.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mdata_structures\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mNumberTree\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mpdfparser\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPDFSyntaxError\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPDFParser\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPDFStreamParser\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m from .pdftypes import (\n\u001b[0m\u001b[0;32m     30\u001b[0m     \u001b[0mDecipherCallable\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m     \u001b[0mPDFException\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'DecipherCallable' from 'pdfminer.pdftypes' (C:\\Users\\mwita\\Anaconda3\\lib\\site-packages\\pdfminer\\pdftypes.py)"
+     ]
+    }
+   ],
    "source": [
     "import pdfplumber\n",
     "import requests\n",
@@ -548,7 +563,79 @@
     "        MAGIW_KIID_DANE.loc[i, \"KRS\"] = krs\n",
     "    except:\n",
     "        pass\n",
-    "        "
+    "    #DATA_AKTUALIZACJI_KIID\n",
+    "\n",
+    "    try:\n",
+    "        miesiace = {'sty': 1,\n",
+    "                      'lut': 2,\n",
+    "                      'mar': 3,\n",
+    "                      'kwi': 4,\n",
+    "                      'maj': 5,\n",
+    "                      'cze': 6,\n",
+    "                      'lip': 7,\n",
+    "                      'sie': 8,\n",
+    "                      'wrz': 9,\n",
+    "                      'paź': 10,\n",
+    "                      'lis': 11,\n",
+    "                      'gru': 12}\n",
+    "        ind = tekst.find('Niniejsze Kluczowe informacje dla inwestorów są aktualne na dzień')\n",
+    "        i1 = ind + len(s)\n",
+    "        i2 = i1 + tekst[i1:].find('r.')\n",
+    "        date = tekst[i1:i2].split()\n",
+    "        miesiac = date[1][:3]\n",
+    "        m = miesiace.get(miesiac)\n",
+    "        date_str = str(m)+'-'+date[0]+'-'+date[2]\n",
+    "        date = datetime.strptime(date_str, '%m-%d-%Y')\n",
+    "        \n",
+    "        MAGIW_KIID_DANE.loc[i, \"DATA_AKTUALIZACJI_KIID\"] = date\n",
+    "        date = NULL\n",
+    "    except:\n",
+    "        pass\n",
+    "#  DEPOZYTARIUSZ\n",
+    "    try:\n",
+    "        s1 = re.split(r\"wyniki osiągnięte w przeszłości\", tekst.lower())[1]#[1].replace(\",\", \"\").split(\" \")[1:]\n",
+    "\n",
+    "        s2 = re.split(r\"informacje praktyczne\", s1.lower())[1]#[1].replace(\",\", \"\").split(\" \")[1\n",
+    "\n",
+    "\n",
+    "\n",
+    "        slowa = s2.split()\n",
+    "\n",
+    "        wynik =[]\n",
+    "        for i in range(len(slowa)):\n",
+    "            if fuzz.ratio(slowa[i], 'depozytariusz') > 90:\n",
+    "\n",
+    "                wynik = wynik + slowa[i:i+8]\n",
+    "                print(slowa[i])\n",
+    "\n",
+    "        s = \" \".join(wynik[1:])\n",
+    "        ind = s.find(\"a.\")\n",
+    "        depoz = s[:ind+2]\n",
+    "        MAGIW_KIID_DANE.loc[i, \"DEPOZYTARIUSZ\"] = depoz\n",
+    "        depoz = NULL\n",
+    "    except:\n",
+    "        pass\n",
+    "    \n",
+    "# PROFIL_RYZYKA_I_ZYSKU\n",
+    "    try:\n",
+    "        t1 = tekst.lower().split('profil ryzyka i zysku')[1]\n",
+    "        t2 = t1.lower().split('opłaty')[0] \n",
+    "        MAGIW_KIID_DANE['PROFIL_RYZYKA_I_ZYSKU'] = t2\n",
+    "        t2 =NULL\n",
+    "    except:\n",
+    "        pass  \n",
+    "  #BENCHMARK    \n",
+    "    try:\n",
+    "        ind = tekst.find('benchmark')\n",
+    "        st = tekst[ind:ind+500]\n",
+    "\n",
+    "        pro = re.findall(\"\\d{2}%\",st)\n",
+    "\n",
+    "        wynik = pro[0] + ' WIG20 + ' + pro[1] + ' mWIG40 + ' + pro[2] + ' WIBID ON'\n",
+    "        MAGIW_KIID_DANE['BENCHMARK'] = wynik\n",
+    "        wynik =NULL\n",
+    "    except:\n",
+    "        pass"
    ]
   },
   {
@@ -1549,7 +1636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
