--- a/KarateKIID.ipynb
+++ b/KarateKIID.ipynb
@@ -635,6 +635,25 @@
     "        MAGIW_KIID_DANE['BENCHMARK'] = wynik\n",
     "        wynik =NULL\n",
     "    except:\n",
+    "        pass\n",
+    "    \n",
+    "    # OPłATY\n",
+    "    try:\n",
+    "        ind = tekst.lower().find('opłaty')\n",
+    "        t1 = tekst[ind:]\n",
+    "        t2 = t1.lower().split('wyniki osiągnięte w przeszłości')[0]\n",
+    "        MAGIW_KIID_DANE['OPLATY'] = t2\n",
+    "        t2 =NULL\n",
+    "    except:\n",
+    "        pass\n",
+    "    \n",
+    "    #WYNIKI_OSIAGNIETE_W_PRZESZLOSCI\n",
+    "    try:\n",
+    "        t1 = tekst.lower().split('wyniki osiągnięte w przeszłości')[1]\n",
+    "        t2 = t1.lower().split('informacje praktyczne')[0] \n",
+    "        MAGIW_KIID_DANE['WYNIKI_OSIAGNIETE_W_PRZESZLOSCI'] = t2\n",
+    "        t2 =NULL\n",
+    "    except:    \n",
     "        pass"
    ]
   },
