--- a/KarateKIID.ipynb
+++ b/KarateKIID.ipynb
@@ -828,6 +828,24 @@
     "            #MAGIW_KIID_DANE['BENCHMARK'] = bench\n",
     "        except:\n",
     "            pass\n",
+    "        # OPłATY\n",
+    "        opl =None\n",
+    "        try:\n",
+    "            ind = tekst.lower().find('opłaty')\n",
+    "            t1 = tekst[ind:]\n",
+    "            opl = t1.lower().split('wyniki osiągnięte w przeszłości')[0]\n",
+    "            L\n",
+    "        except:\n",
+    "            pass\n",
+    "        #WYNIKI_OSIAGNIETE_W_PRZESZLOSCI\n",
+    "        przeszl = None\n",
+    "        try:\n",
+    "            t1 = tekst.lower().split('wyniki osiągnięte w przeszłości')[1]\n",
+    "            preszl = t1.lower().split('informacje praktyczne')[0] \n",
+    "            \n",
+    "            \n",
+    "        except:    \n",
+    "            pass\n",
     "        if len(cat) == 0:\n",
     "            cat = [None]\n",
     "        for c in cat:\n",
@@ -857,12 +875,12 @@
     "                      \"ZALECANY_OKRES_INWESTYCJI\": None,\n",
     "                      \"PROFIL_RYZYKA_I_ZYSKU\": t2,\n",
     "                      \"SRRI\": None,\n",
-    "                      \"OPLATY\": None,\n",
+    "                      \"OPLATY\": opl,\n",
     "                      \"OPLATA_ZA_NABYCIE\": None,\n",
     "                      \"OPLATA_ZA_ODKUPIENIE\": None,\n",
     "                      \"OPLATY_BIEZACE\": None,\n",
     "                      \"OPLATY_ZA_WYNIKI\": None,\n",
-    "                      \"WYNIKI_OSIAGNIETE_W_PRZESZLOSCI\": None,\n",
+    "                      \"WYNIKI_OSIAGNIETE_W_PRZESZLOSCI\": preszl,\n",
     "                      \"STOPA_ZWROTU_2012\": None,\n",
     "                      \"STOPA_ZWROTU_2012_BENCHMARK\": None,\n",
     "                      \"STOPA_ZWROTU_2013\": None,\n",
